[package]
name = "in-keys"
version = "0.2.0"
edition = "2021"
description = "Crate for utilizing streams in a convenient `Terminal` construct"
repository = "https://github.com/Sapiet1/in-keys"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
derived-deref = "2"