[package]
name = "in-keys"
version = "0.2.0"
edition = "2021"
description = "Crate for utilizing streams in a convenient `Terminal` construct"
repository = "https://github.com/Sapiet1/in-keys"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derived-deref = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Console"] }
